# pico-starter-project

./: CMakeLists.txt  README.md  vcpkg-configuration.json
.devcontainer/: Dockerfile  devcontainer.json
src/: test.c
